final push before submission 1-05-23

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="btn_upload_story">Upload Story</string>
     <string name="capture_image">Capture Image</string>
     <string name="switch_camera">Switch Camera</string>
+    <string name="logout_button">Logout Button</string>
 </resources>
