--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="item_story_image">Story Image</string>
     <string name="logout_menu">Logout</string>
     <string name="created_at">Created at</string>
-    <string name="welcome_back">Welcome back, user!</string>
+    <string name="welcome_back">Welcome back!</string>
     <string name="detail_story_image">Detail Story Image</string>
     <string name="add_story_fab">Add Story Button</string>
     <string name="add_story_image">Add Story Image</string>
