--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,13 @@
     <string name="capture_image">Capture Image</string>
     <string name="switch_camera">Switch Camera</string>
     <string name="logout_button">Logout Button</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="maps_activity">Maps Activity</string>
+    <string name="normal_type">Normal</string>
+    <string name="satellite_type">Satellite</string>
+    <string name="terrain_type">Terrain</string>
+    <string name="hybrid_type">Hybrid</string>
+    <string name="empty_location">No Location</string>
+    <string name="empty_address">No Address</string>
+    <string name="retry">Coba lagi</string>
 </resources>
